# chunky

./: .gitignore  README.md  pyproject.toml
src/: coca_sample_test.py  example.db  make_corpus.py  test_corpus.py
src/chunky/: __init__.py  corpus.py  corpus_helper.py  create_corpus.py  preprocessing_corpus.py  processing_corpus.py
src/chunky/corpora/: test_corpus.txt
